--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <h2>Groups</h2>
         <p>Here are the Chat History of Sonic QQ Groups</p>
         <ul class="icon-list ps-0">
-          <li class="d-flex align-items-start mb-1"><a href="/☆索尼克的乐园☆/☆索尼克的乐园☆.htm" rel="noopener" target="_blank">☆索尼克的乐园☆</a></li>
+          <li class="d-flex align-items-start mb-1"><a href="./☆索尼克的乐园☆/☆索尼克的乐园☆.htm" rel="noopener" target="_blank">☆索尼克的乐园☆</a></li>
           <li class="text-muted d-flex align-items-start mb-1">More comming soon...</li>
         </ul>
       </div>
