Upload bak file

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
   <main>
     <h1>Welcome to Sonic Restore Project</h1>
-    <p class="fs-5 col-md-8">Here, you can access the archived pages of deleted and dissolved Sonic Fan Communities.</p>
+    <p class="fs-5 col-md-8">Here, you can access the archived pages from deleted and dissolved Sonic Fan Communities.</p>
 
 
     <hr class="col-3 col-md-2 mb-5">
