--- a/index.html
+++ b/index.html
@@ -77,13 +77,12 @@
     <h1>Welcome to Sonic Restore Project</h1>
     <p class="fs-5 col-md-8">Here, you can access the archived pages from deleted and dissolved Sonic Fan Communities.</p>
 
-
     <hr class="col-3 col-md-2 mb-5">
 
     <div class="row g-5">
       <div class="col-md-6">
         <h2>Groups</h2>
-        <p>Here are the Chat History of Sonic QQ Groups</p>
+        <p>Here are the Chat History from Sonic QQ Groups</p>
         <ul class="icon-list ps-0">
           <li class="d-flex align-items-start mb-1"><a href="./Groups/☆索尼克的乐园☆/☆索尼克的乐园☆.htm" rel="noopener" target="_blank">☆索尼克的乐园☆</a>&nbsp;(Dissolved Reasons:&nbsp;<a href="./Groups/☆索尼克的乐园☆/Deleted Reason 1.jpg">1</a>,&nbsp;<a href="./Groups/☆索尼克的乐园☆/Deleted Reason 2.jpg">2</a>)</li>
           <li class="text-muted d-flex align-items-start mb-1">More comming soon...</li>
@@ -92,7 +91,7 @@
 
       <div class="col-md-6">
         <h2>Websites</h2>
-        <p>Backup pages of dissolved Sonic Websites</p>
+        <p>Backup pages of Sonic Websites</p>
         <ul class="icon-list ps-0">
           <li class="text-muted d-flex align-items-start mb-1">More comming soon...</li>
         </ul>
@@ -100,7 +99,7 @@
     </div>
   </main>
   <footer class="pt-5 my-5 text-muted border-top">
-    Archive pages do not represent the views of the project participants.
+    Archive pages do not represent the views of the project participants.<br>One and only domain: sonic-restore.github.io
   </footer>
 </div>
 
